<resources>
    <string name="app_name">Companion for PhotoPrism</string>
    <string name="retry">Retry</string>
    <string name="hint_media_library_search">Search in library</string>
    <string name="btn_apply_search">Apply</string>
    <string name="btn_reset_search">Reset</string>
    <string name="hint_albums_search">Search albums</string>
    <string name="hint_album_content_search">Search in \"%s\"</string>
    <string name="menu_item_photos">Photos</string>
    <string name="menu_item_albums">Albums</string>
    <string name="auth_title">Companion</string>
    <string name="auth_subtitle">for PhotoPrism</string>
    <string name="auth_welcome_text">Welcome</string>
    <string name="btn_proceed_to_connect">Connect to the library</string>
    <string name="content_description_library_root">Link icon</string>
    <string name="hint_library_root">Library root URL</string>
    <string name="hint_username_optional">Username (optional)</string>
    <string name="content_description_username">Person icon</string>
    <string name="hint_password_optional">Password (optional)</string>
    <string name="content_description_password">Lock icon</string>
    <string name="authenticator_label">Companion for PhotoPrism</string>
    <string name="error_empty_library_root">Please fill this field</string>
    <string name="error_invalid_library_root">This is not a valid URL</string>
    <string name="error_empty_username">Please fill this field too</string>
    <string name="error_empty_password">Please fill this field too</string>
    <string name="error_could_not_connect">Could not connect to the library</string>
    <string name="common_error_description">Something went wrong</string>
    <string name="empty">It\'s empty here...</string>
</resources>